--- a/public/assets/css/game.css
+++ b/public/assets/css/game.css
@@ -1,24 +1,27 @@
 body {
     background-image: url('../images/maroon.png');
 }
+
 table#game_board {
     margin: auto;
     border-style: solid;
     border-width: 10px;
-    border-color: rgb(100,100,100);
+    border-color: black;
+    background-color: darkgreen;
 }
 
-table#game_board td{
+table#game_board td {
     padding: 5px;
     border-style: solid;
     border-width: 1px;
-    border-color: rgb(50,50,50);
+    border-color: black;
 }
-#messages p{
+
+#messages p {
     margin: 0px;
 }
 
 td.hovered_over:hover {
-    background:url('../images/hover.gif');
+    background: url('../images/hover.gif');
     background-size: 100% 100%;
 }
